# VandyCPS

./: Dockerfile  README.md  all_node.sh  docker-compose.yml
competition_packages/: all_node.sh
competition_packages/cps_vision/: CMakeLists.txt  README.md  package.xml
competition_packages/cps_vision/include/cps_vision/: cps_vision.h
competition_packages/cps_vision/src/: cps_vision.cpp  cps_vision_main.cpp  pic_collection.cpp
competition_packages/cwru_opencv_common/: CMakeLists.txt  README.md  package.xml
competition_packages/cwru_opencv_common/include/cwru_opencv_common/: block_detection.h  circle_detection.h  color_model.hpp  cv_rotations.h  ellipse_modeling.h  ellipse_modeling_numerical.h  grab_cut.h  image_topic_callbacks.h  manual_labeling.h  opencv_geometry_2d.h  opencv_geometry_3d.h  opencv_local.h  opencv_ui.h  projective_geometry.h  stereo_image.h
competition_packages/cwru_opencv_common/node/: manual_labeling_node.cpp
competition_packages/cwru_opencv_common/src/: block_detection.cpp  circle_detection.cpp  color_model.cpp  cv_rotations.cpp  ellipse_modeling.cpp  ellipse_modeling_numerical.cpp  grab_cut.cpp  manual_labeling.cpp  opencv_geometry_2d.cpp  opencv_geometry_3d.cpp  opencv_local.cpp  opencv_ui.cpp  projective_geometry.cpp
competition_packages/cwru_opencv_common/srv/: image_label.srv
competition_packages/cwru_opencv_common/test/: gtest_cv_rotations.cpp  gtest_ellipse_matching.cpp  gtest_manual_labeling.cpp  gtest_point_array_projection.cpp  gtest_point_array_projection.test  rostest_ellipse_matching.cpp  rostest_ellipse_matching.test  test_ellipse.cpp
competition_packages/flight_main/: CMakeLists.txt  package.xml
competition_packages/flight_main/launch/: flight_launch.launch
competition_packages/flight_main/src/: flight_main_node.cpp
competition_packages/flight_test/: package.xml
competition_packages/flight_test/launch/: flight_launch.launch
competition_packages/flight_test/src/: flight_test_node.cpp  usb_cam_tracker.py
competition_packages/flight_test_faster/: CMakeLists.txt  package.xml
competition_packages/flight_test_faster/src/: flight_test_faster_node.cpp  flight_test_node.cpp
ex1/: CMakeLists.txt  package.xml  ros-maneuver.py
setup_files/: makefile.mak  step1.bash  step2.bash
